# FitTwin

./: .env.example  .gitignore  LICENSE  README.md
backend/: demo.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  deps.py  domain.py  main.py
backend/app/agents/: graph.py  motivation.py  nutrition.py  orchestrator.py  progress.py  prompts.py  registry.py  runner.py  safety.py  schemas.py  state.py  templates.py  workout.py
backend/app/agents/tools/: dashboard_math.py  food_parser.py  nutrition_math.py  progress_math.py
backend/app/ai/: llm.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  coach.py  dashboard.py  health.py  logs.py  profile.py
backend/app/core/: security.py
backend/app/models/: __init__.py  log.py  plan.py  profile.py  user.py
backend/app/repositories/: log_repo.py  plan_repo.py  profile_repo.py  user_repo.py
backend/app/schemas/: auth.py  coach.py  dashboard.py  logs.py
backend/app/services/: auth_service.py  coach_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_dashboard_math.py  test_food_parser.py  test_graph.py  test_integration_db.py  test_nutrition_math.py  test_progress_math.py  test_safety.py
docs/: 01-system-architecture.md  02-multi-agent-system.md  03-data-model.md  04-backend.md  05-frontend.md  06-design-system.md  07-roadmap.md  08-domain-nutrition-equipment.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/lib/: api.js  (+1 more)
(+12 files in other folders)
